--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -6231,6 +6231,53 @@ body.scrolling-up .site-header.is-sticky {
     text-transform: uppercase;
     color: #FFFFFF;
 }
+/* Style The Dropdown Button */
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #000;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: 
+#b08800}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {
+    background-color: #3e8e41;
+  }
 @media (min-width: 768px) {
     .event-is-live .site-header .live-navigation {
     flex-grow: 1;
@@ -6245,7 +6292,7 @@ body.scrolling-up .site-header.is-sticky {
 }
 @media (min-width: 1012px) {
     .event-is-live .site-header .desktop-navigation {
-    padding-left: 12px;
+    padding-left: 2px;
     flex-grow: 0;
     width: auto;
 }
@@ -6353,7 +6400,7 @@ body.scrolling-up .site-header.is-sticky {
     margin-left: 24px;
 }
 }.desktop-navigation .has-sub-nav>div, .desktop-navigation a:not(.button) {
-    font-size: 12px; 
+    font-size: 14px; 
     color: #fff;
     font-weight: 400;
     display: flex;
